[package]
name = "converter"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
serde_yaml = "0.8"
json5= "0.2.2"

clap = { version = "3.1.8", features = ["derive"] }
regex = "1"
